[tool.poetry]
package-mode = false

name = "Security_Guard"
version = "0.1.0"
description = "A cybersecurity threat intelligence system using AI agents and Digital Genome structure"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
neo4j = "^5.7.0"
langchain = "^0.0.150"
transformers = "^4.28.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
beautifulsoup4 = "^4.12.2"
scrapy = "^2.8.0"
celery = "^5.2.7"
redis = "^4.5.4"
prometheus-client = "^0.16.0"
pyjwt = "^2.6.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true